v1.0.8
- TWEAK: Remove `#body` wrapper inside the `<body>` tag.
- TWEAK: Improve minor WooCommerce CSS.
- TWEAK: Improve some text strings in admin pages.
- FIX: When White Label mode is active (via Suki Pro), it should show the White Label value instead of original theme name "Suki".

v1.0.7
- FIX: Border CSS bug (grid blog post).

v1.0.6
- FIX: Border CSS bug.

v1.0.5
- TWEAK: Improve Gutenberg editor CSS.
- TWEAK: Remove additional custom CSS for Elementor, now will use 100% Elementor default CSS.

v1.0.4
- TWEAK: Use Filesystem API to render inline SVG.

v1.0.3
- TWEAK: Remove default center alignment for Image Widget.
- FIX: Footer widgets gap CSS.
- FIX: SVG logo rendering error.

v1.0.2
- TWEAK: Improve content row CSS.
- FIX: WooCommerce's single product gallery width CSS.
- FIX: Header submenu / dropdown CSS.

v1.0.1
- TWEAK: Improve WooCommerce products grid CSS.
- TWEAK: Improve Gutenberg columns CSS.

v1.0.0
- NEW: Allow child theme to use parent theme options (for easier migration).
- NEW: Default blog posts layout will automatically use `excerpt` instead of the main `content` if specified.
- NEW: Options to change header's submenu colors on each header bar (top, main, bottom bar).
- NEW: Options to change header's cart count colors.
- NEW: Options to change entry footer text alignment.
- NEW: Header popup (e.g. mobile header drawer) will automatically close when user clicks a hash link to elements on the same page.
- NEW: Filters (`suki/page_settings/setting_value` and `suki/page_settings/setting_value/{$key}`) to modify current page setting values when retrieving1.
- NEW: Filters (`suki/customizer/setting_value` and `suki/customizer/setting_value/{$key}`) to modify theme option values when retrieving1.
- NEW: Filter (`suki/frontend/svg_icon/`) to modify the SVG tags of theme's icons.
- NEW: Filters to add classes to many different post entries.
- NEW: Filters to add classes to some WooCommerce elements.