@@ -25,6 +25,17 @@ if ( ! defined( 'ABSPATH' ) ) exit;
 	<body <?php body_class(); ?>>
 		<?php
 		/**
+		 * Hook: wp_body_open
+		 *
+		 * `wp_body_open` is a native theme hook available since WordPress 5.2
+		 */
+		if ( function_exists( 'wp_body_open' ) ) {
+			wp_body_open();
+		} else {
+			do_action( 'wp_body_open' );
+		}
+
+		/**
 		 * Hook: suki/frontend/before_canvas
 		 *
 		 * @hooked suki_skip_to_content_link - 1
