@@ -1,4 +1,5 @@
 v1.0.8
+- NEW: Add the new `wp_body_open()` theme hook (WordPress 5.2 compatibility).
 - TWEAK: Remove `#body` wrapper inside the `<body>` tag.
 - TWEAK: Improve minor WooCommerce CSS.
 - TWEAK: Improve some text strings in admin pages.
